# catgraph

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
benches/: interval.rs  rayon_thresholds.rs
catgraph/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
catgraph-applied/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
catgraph-applied/benches/: rayon_thresholds.rs
catgraph-applied/docs/: SEVEN-SKETCHES-AUDIT.md
catgraph-applied/examples/: decorated_cospan_circuit.rs  e1_operad.rs  e2_operad.rs  free_prop.rs  linear_combination.rs  operad_algebra_circ.rs  operad_functor_e1_to_e2.rs  petri_net.rs  petri_net_braiding.rs  rig_showcase.rs  sfg_to_mat.rs  temperley_lieb.rs  wasi_smoke_applied.rs  wiring_diagram.rs
catgraph-applied/src/: decorated_cospan.rs  e1_operad.rs  e2_operad.rs  enriched.rs  graphical_linalg.rs  lawvere_metric.rs  lib.rs  linear_combination.rs  mat.rs  mat_f64.rs  operad_algebra.rs  operad_functor.rs  petri_net.rs  prop.rs  rig.rs  sfg.rs  sfg_to_mat.rs  temperley_lieb.rs  wiring_diagram.rs
catgraph-applied/src/prop/: mod.rs  presentation.rs
catgraph-applied/src/prop/presentation/: functorial.rs  kb.rs  mod.rs  smc_nf.rs
catgraph-applied/tests/: decorated_cospan.rs  enriched.rs  functorial.rs  graphical_linalg.rs  kb.rs  linear_combination_coverage.rs  mat.rs  mat_f64.rs  normalize_result.rs  operad_algebra.rs  operad_boundary.rs  operad_functor.rs  petri_net.rs  presentation.rs  prop.rs  rayon_equivalence.rs  rayon_parallel.rs  sfg_to_mat.rs  smc_nf_completeness.proptest-regressions  smc_nf_completeness.rs  smc_nf_regression.rs  temperley_lieb.rs  wiring_diagram.rs
catgraph-magnitude/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
catgraph-magnitude/benches/: magnitude_bench.rs
catgraph-magnitude/examples/: lm_magnitude.rs  mock_coalition.rs  tsallis_shannon.rs
catgraph-magnitude/src/: lib.rs  lm_category.rs  magnitude.rs  ring.rs  weighted_cospan.rs
catgraph-magnitude/tests/: bv_2025_acceptance.rs  lm_category.rs  magnitude.proptest-regressions  magnitude.rs  weighted_cospan.rs
catgraph-physics/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
catgraph-physics/benches/: wasserstein_bench.rs
catgraph-physics/examples/: gauge.rs  hypergraph.rs  multiway.rs  wasi_smoke_physics.rs
catgraph-physics/src/: lib.rs
catgraph-physics/src/hypergraph/: evolution.rs  evolution_cospan.rs  gauge.rs  hyperedge.rs  hypergraph.rs  mod.rs  multiway_cospan.rs  rewrite_rule.rs  rewrite_span.rs
catgraph-physics/src/multiway/: branchial.rs  branchial_analysis.rs  branchial_spectrum.rs  curvature.rs  evolution_graph.rs  mod.rs  ollivier_ricci.rs  wasserstein.rs
catgraph-physics/tests/: branchial_analysis.rs  catgraph_bridge.rs  gauge_theory.rs  hypergraph_rewriting.rs  multiway_evolution.rs
catgraph-surreal/: Cargo.toml
catgraph-surreal/src/: cospan_store.rs  edge_store.rs  error.rs  fingerprint.rs  hyperedge_store.rs  hypergraph_evolution_store.rs  lib.rs  named_cospan_store.rs  node_store.rs  persist.rs  petri_net_store.rs  query.rs  schema.rs  schema_v2.rs  span_store.rs  types.rs  types_v2.rs  wiring_store.rs
catgraph-surreal/src/hyperedge/: decompose.rs  mod.rs  provenance.rs  reconstruct.rs
catgraph-surreal/tests/: v2_fingerprint_search.rs
catgraph/benches/: pullback.rs  pushout.rs
catgraph/docs/: CTFP-XREF.md  FONG-SPIVAK-AUDIT.md
catgraph/examples/: coherence.rs  corel.rs  cospan.rs  equivalence.rs  frobenius.rs  hypergraph_category.rs  interval.rs  linear_combination.rs  named_cospan.rs  wasi_smoke_core.rs
catgraph/src/: category.rs  compact_closed.rs  corel.rs  cospan.rs  cospan_algebra.rs  e2_operad.rs  equivalence.rs  errors.rs  finset.rs  hypergraph_functor.rs  lib.rs  linear_combination.rs  monoidal.rs  named_cospan.rs  operadic.rs  petri_net.rs  span.rs  stokes.rs  utils.rs  wiring_diagram.rs
catgraph/src/frobenius/: mod.rs  morphism_system.rs  operations.rs
catgraph/src/hypergraph/: evolution.rs  mod.rs  rewrite_rule.rs
catgraph/src/multiway/: evolution_graph.rs
catgraph/tests/: adjunction_laws.rs  bifunctor_laws.rs  catgraph_bridge.rs  compact_closed.rs  complexity_laws.rs  composition_laws.rs  corel.rs  corel_hypergraph_category.rs  cospan_algebra.rs  cospan_compose_with_quotient.rs  cross_type_interactions.rs  equivalence.rs  finset_coverage.rs  gauge_theory.rs  hypergraph_functor.rs  hypergraph_rewriting.rs  linear_combination_coverage.rs  multiway_evolution.rs  mutation_workflows.rs  operad_boundary.rs  petri_net.rs  property_laws.rs  rayon_equivalence.rs  rayon_parallel.rs  relation_algebra.rs  spider_theorem.rs  stokes_laws.rs  wiring_diagram.rs
catgraph/tests/common/: mod.rs
examples/: adjunction.rs  bifunctor.rs  compact_closed.rs  complexity.rs  computation_state.rs  cospan_algebra.rs  e1_operad.rs  e2_operad.rs  finset.rs  gauge.rs  hypergraph.rs  hypergraph_functor.rs  linear_combination.rs  monoidal.rs  multiway.rs  petri_net.rs  span.rs  stokes.rs  temperley_lieb.rs  wiring_diagram.rs
src/: category.rs  complexity.rs  computation_state.rs  cospan.rs  cospan_algebra.rs  e1_operad.rs  e2_operad.rs  equivalence.rs  errors.rs  finset.rs  frobenius.rs  hypergraph_category.rs  hypergraph_functor.rs  interval.rs  lib.rs  linear_combination.rs  main.rs  monoidal.rs  named_cospan.rs  operadic.rs  petri_net.rs  span.rs  temperley_lieb.rs  utils.rs  wiring_diagram.rs
src/frobenius/: mod.rs  morphism_system.rs  operations.rs  trait_impl.rs
src/hypergraph/: evolution.rs  gauge.rs  hypergraph.rs  mod.rs  multiway_cospan.rs
src/multiway/: branchial.rs  evolution_graph.rs  mod.rs
tests/: coherence_laws.rs  compact_closed.rs  composition_laws.rs  computation_state_laws.rs  cospan_algebra.rs  cross_type_interactions.rs  equivalence.rs  frobenius_laws.rs  gauge_theory.rs  hypergraph_functor.rs  hypergraph_rewriting.rs  interval_laws.rs  monoidal_structure.rs  morphism_system.rs  multiway_evolution.rs  operad_boundary.rs  petri_net.rs  property_laws.rs  pushout_correctness.rs  relation_algebra.rs  temperley_lieb.rs  wiring_diagram.rs
(+2 files in other folders)
