[workspace]
resolver = "2"
members = ["catgraph", "catgraph-physics", "catgraph-applied", "catgraph-magnitude"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["tsondru", "Claude <noreply@anthropic.com>"]
repository = "https://github.com/tsondru/catgraph"
homepage = "https://github.com/tsondru/catgraph"
categories = ["mathematics", "science"]

[workspace.dependencies]
# Hoisted direct dependencies (used by 2+ workspace crates)
either = "1.15"
itertools = "0.14"
num = "0.4"
permutations = "0.1"
rand = "0.10"
rayon = "1.12"
rust_decimal = "1"
rustworkx-core = "0.17"

# Hoisted dev-dependencies (used by all workspace crates)
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

# Single-consumer deps kept local to their member:
#   - catgraph:         log, env_logger, thiserror, union-find
#   - catgraph-physics: nalgebra, nalgebra-sparse, petgraph
