[package]
name = "catgraph-applied"
version = "0.3.2"
description = "Applied category theory extensions for catgraph: Petri nets, E_n operads, Temperley-Lieb, wiring diagrams, linear combinations"
keywords = ["category-theory", "operad", "petri-net", "temperley-lieb", "wiring-diagram"]
categories = ["mathematics", "science", "data-structures"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
catgraph = { path = "../catgraph" }
either.workspace = true
itertools.workspace = true
num.workspace = true
permutations.workspace = true
rand.workspace = true
rayon.workspace = true
rayon-cond = "0.4"
rust_decimal.workspace = true
rustworkx-core.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "rayon_thresholds"
harness = false
