[package]
name = "catgraph-applied"
version = "0.5.3"
description = "Applied category theory extensions for catgraph: Petri nets, E_n operads, Temperley-Lieb, wiring diagrams, linear combinations, props, operad algebras and functors"
keywords = ["category-theory", "operad", "petri-net", "temperley-lieb", "wiring-diagram"]
categories = ["mathematics", "science", "data-structures"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["parallel"]
# `parallel` enables rayon + rayon_cond::CondIterator at the two HashMap
# `into_par_iter` sites in linear_combination and the two `par_bridge` sites
# in temperley_lieb::non_crossing. With the feature off, those sites fall
# back to plain `.into_iter()`. Phase W.1.
parallel = ["dep:rayon", "dep:rayon-cond", "catgraph/parallel"]
# `f64-rig` exposes the mat_f64 module: nalgebra bridge for MatR<F64Rig>
# (determinant, try_inverse, DMatrix roundtrip). Opt-in; off by default to
# keep the nalgebra compile cost out of the way for Tropical / Bool / user
# rigs that can't use field-specific operations anyway.
f64-rig = ["dep:nalgebra"]

[dependencies]
catgraph = { path = "../catgraph", default-features = false }
either.workspace = true
itertools.workspace = true
nalgebra = { version = "0.34", optional = true }
num.workspace = true
permutations.workspace = true
rand.workspace = true
rayon = { workspace = true, optional = true }
rayon-cond = { version = "0.4", optional = true }
rust_decimal.workspace = true
rustworkx-core.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "rayon_thresholds"
harness = false
