[package]
name = "catgraph-magnitude"
version = "0.1.0"
description = "Magnitude of enriched categories for catgraph: Lawvere metric spaces, Tsallis entropy, Möbius inversion, and BV 2025 closed-form magnitude"
keywords = ["category-theory", "magnitude", "entropy", "enriched-category", "information-theory"]
categories = ["mathematics", "science"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
catgraph = { path = "../catgraph", default-features = false }
catgraph-applied = { path = "../catgraph-applied", default-features = false }
num.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "magnitude_bench"
harness = false

# Phase 6A complete (v0.1.0). Pure-math crate: no tokio, no serde, no rayon.
# `catgraph-applied` pinned to path during Phase 6A development; crates.io
# publication switches the path dep to version = "0.5" (crates.io strips the
# path attribute automatically on publish).
