[package]
name = "catgraph-physics"
version = "0.2.1"
description = "Wolfram-physics extensions for catgraph: hypergraph DPO rewriting, multiway evolution, gauge theory, branchial spectral analysis"
keywords = ["hypergraph", "multiway", "rewriting", "spectral", "wolfram-physics"]
categories = ["mathematics", "science", "simulation"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
catgraph = { path = "../catgraph" }
rustworkx-core.workspace = true
nalgebra = "0.34"
nalgebra-sparse = "0.11"
petgraph = "0.8"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "wasserstein_bench"
harness = false
