[package]
name = "catgraph-physics"
version = "0.2.2"
description = "Wolfram-physics extensions for catgraph: hypergraph DPO rewriting, multiway evolution, gauge theory, branchial spectral analysis"
keywords = ["hypergraph", "multiway", "rewriting", "spectral", "wolfram-physics"]
categories = ["mathematics", "science", "simulation"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["parallel"]
# Pass-through of `catgraph/parallel` — this crate has no direct rayon sites
# yet (see TODO comments in `hypergraph/evolution_cospan.rs` and
# `multiway/branchial.rs` for deferred par_array_windows adoption), but
# downstream users that compile with `--no-default-features` expect the
# transitive catgraph build to be single-threaded too. Phase W.1.
parallel = ["catgraph/parallel"]

[dependencies]
catgraph = { path = "../catgraph", default-features = false }
rustworkx-core.workspace = true
nalgebra = "0.34"
nalgebra-sparse = "0.11"
petgraph = "0.8"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "wasserstein_bench"
harness = false
