[package]
name = "catgraph-surreal"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "SurrealDB persistence layer for catgraph cospan/span structures"
repository = "https://github.com/tsondru/catgraph"
authors = ["tsondru", "Claude <noreply@anthropic.com>"]
publish = false

[dependencies]
catgraph = { path = ".." }
surrealdb = { version = "3.0.5", default-features = false, features = ["kv-mem"] }
surrealdb-types = "3.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
rust_decimal = { version = "1", features = ["serde-str"] }
petgraph = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
