[package]
name = "catgraph"
version = "0.11.3"
description = "Category-theoretic graph structures: cospans, spans, Frobenius algebras, and morphisms in symmetric monoidal categories — strict Fong-Spivak 2019"
keywords = ["category-theory", "cospan", "monoidal", "frobenius", "operad"]
categories = ["mathematics", "science", "data-structures"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
either.workspace = true
itertools.workspace = true
num.workspace = true
permutations.workspace = true
rand.workspace = true
rayon.workspace = true
rust_decimal.workspace = true
rustworkx-core.workspace = true
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
thiserror = "2"
union-find = "0.4"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
env_logger = "0.11"

[[bench]]
name = "pushout"
harness = false

[[bench]]
name = "pullback"
harness = false
